--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
         // 数据数组
         const entries = [
         {
+            date: "2025-04-29",
+            content: "教室里仿佛一座嘈杂的市场，每个人的声音都像是匆匆的小溪，快速流过我的耳边。有同学在低声讨论着课本上的难题，神情焦急；有的同学在大声地相互争论，脸上写满了不服气。还有同学笑声不断，像是铃铛一般清脆又刺耳。我快速翻阅课本，无法平静。"
+          },
+        {
             date: "2025-04-28",
             content: "她穿着蓝色的运动服，在田径场上是那么耀眼。她微微俯身，凝视前方，脸部线条紧绷，嘴角抿成一条直线，宛如一只蓄势待发的猎豹，透露出全力以赴的决心。哨声一响，她如离弦之箭般猛地射了出去。矫健的身影在跑道上疾驰，如同一道闪电，就连观众的眼睛都追不上她。"
           },
