--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-100-M/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;500;600;700&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/mermaid/8.14.0/mermaid.min.js"></script>
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <style>
         :root {
             --primary-color: #4a5568;
@@ -203,13 +203,14 @@
         <!-- 页脚 -->
         <footer class="footer">
             <div class="visit-count">
-                <span id="busuanzi_container_site_pv">
-                    总访问量 <span id="busuanzi_value_site_pv"></span> 次
+                <span id="busuanzi_container_site_pv" style="display: none;">
+                    总访问量 <span id="busuanzi_value_site_pv">0</span> 次
                 </span>
                 &nbsp;|&nbsp;
-                <span id="busuanzi_container_site_uv">
-                    访客数 <span id="busuanzi_value_site_uv"></span> 人
+                <span id="busuanzi_container_site_uv" style="display: none;">
+                    访客数 <span id="busuanzi_value_site_uv">0</span> 人
                 </span>
+                <span class="loading-text">访问统计加载中...</span>
             </div>
         </footer>
     </div>
@@ -536,6 +537,23 @@ ${entry.title ? `<h3 class="text-lg font-bold mb-3 dark-title">${entry.title}</h
                 card.style.opacity = '0';
                 observer.observe(card);
             });
+
+            // 等待不蒜子脚本加载完成
+            const checkBusuanzi = setInterval(() => {
+                if (typeof busuanzi !== 'undefined') {
+                    document.querySelector('.loading-text').style.display = 'none';
+                    document.querySelector('#busuanzi_container_site_pv').style.display = 'inline';
+                    document.querySelector('#busuanzi_container_site_uv').style.display = 'inline';
+                    clearInterval(checkBusuanzi);
+                }
+            }, 1000);
+
+            // 3秒后如果还没加载成功，显示加载失败信息
+            setTimeout(() => {
+                if (typeof busuanzi === 'undefined') {
+                    document.querySelector('.loading-text').textContent = '访问统计加载失败';
+                }
+            }, 3000);
         });
 
         // 搜索功能
