--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
     <script>
         // 数据数组
         const entries = [
+                    {
+            date: "2025-05-06",
+            title: "天气真热",
+            content: "空中没有一丝云，没有一丝风，大树像是生病了一样无精打采，蝉鸣声也显得烦躁不安。路上的行人寥寥无几，都贴着墙根的阴影飞快地走过，仿佛多停留一会，脚底板就要着火一般。"
+          },
         {
             date: "2025-04-29",
             content: "教室里仿佛一座嘈杂的市场，每个人的声音都像是匆匆的小溪，快速流过我的耳边。有同学在低声讨论着课本上的难题，神情焦急；有的同学在大声地相互争论，脸上写满了不服气。还有同学笑声不断，像是铃铛一般清脆又刺耳。我快速翻阅课本，无法平静。"
