--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     {
             date: "2025-05-06",
             title: "（天气真热）",
-            content: "空中没有一丝云，没有一丝风，大树像是生病了一样无精打采，蝉鸣声也显得烦躁不安。路上的行人寥寥无几，都贴着墙根的阴影飞快地走过，仿佛多停留一会，脚底板就要着火一般。"
+            content: "空中没有一朵云，没有一丝风，大树像是生病了一样无精打采，蝉鸣声也显得烦躁不安。路上的行人寥寥无几，都贴着墙根的阴影飞快地走过，仿佛多停留一会，脚底板就要着火一般。"
           },
         {
             date: "2025-04-29",
