fix: 修改标题文本为“内容生成1”

--- a/admin.html
+++ b/admin.html
@@ -145,7 +145,7 @@
 
     <div class="container mx-auto px-4 max-w-4xl">
         <header class="text-center mb-12">
-            <h1 class="text-4xl font-bold mb-4">内容生成</h1>
+            <h1 class="text-4xl font-bold mb-4">内容生成1</h1>
             <a href="index.html" class="text-lg">返回首页</a>
         </header>
 
