--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
     <script>
         // 数据数组
         const entries = [
+        {
+            date: "2025-05-08",
+            title: "（考试考砸了）",
+            content: "我低垂着头，拖着沉重的步伐，一步一步向家里挪，脚下仿佛灌了铅似的。路过商店的时候，我不自觉地停下脚步，看了看橱窗，橱窗里反射出我的脸，眉毛低垂，双眼无神，面如土色。可恶的应用题！可恶的小数点！为什么我会这么粗心？现在后悔也来不及了。"
+          },
                     {
             date: "2025-05-06",
             title: "（天气真热）",
