--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         const entries = [
                       {
             date: "2025-05-09",
-            content: "雨下得真大！豆大的雨水倾泻而下，天地间仿佛挂上了一－幅巨大的水幕，街道上瞬间水流成河，车辆驶过，溅起半人高的水花。远处的高楼在雨雾中若隐若现，仿佛置身于缥缈的仙境。"
+            content: "雨下得真大！豆大的雨水倾泻而下，天地间仿佛挂上了一幅巨大的水幕，街道上瞬间水流成河，车辆驶过，溅起半人高的水花。远处的高楼在雨雾中若隐若现，仿佛置身于缥缈的仙境。"
           },
         {
             date: "2025-05-08",
