--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
     <script>
         // 数据数组
         const entries = [
+                  {
+            date: "2025-05-12",
+            title: "（跳绳）",
+            content: "操场一角，她身轻如燕，手中跳绳飞速旋转，似银色光环将她笼罩，只见她双脚轻快跳跃，似装了弹簧，时而单脚点地，时而双脚交替，玩起双摇时，跳绳如闪电般绕身两周，她嘴角上扬，露出自信笑容。周围小伙伴们看得入神，眼睛瞪得溜圆，满是羡慕！"
+          },
         {
             date: "2025-05-08",
             title: "（考试考砸了）",
