feat: 添加新的内容条目，描述弟弟贪吃的场景

--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
     <script>
         // 数据数组
         const entries = [
+                  {
+            date: "2025-05-13",
+            title: "（围绕一个意思写）",
+            content: "弟弟十分贪吃，看到巧克力就两眼放光， 一口接一口往嘴里塞；看到他最爱的草莓蛋糕，更是狼吞虎咽，没一会儿就消灭了一大块；就连普通的小饼干，他也能吃得津津有味，一袋接一袋停不下来。"
+          },
                             {
             date: "2025-05-12",
             title: "（跳绳）",
