feat: 添加高亮样式并更新内容，突出显示特定词汇

--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
             transform: translateY(-50%);
             color: var(--secondary-color);
         }
+
+        .highlight-red {
+            color: #ff0000; 
+        }
     </style>
 </head>
 <body class="min-h-screen py-8">
@@ -203,7 +207,7 @@
                   {
             date: "2025-05-13",
             title: "（围绕一个意思写）",
-            content: "弟弟十分贪吃，看到巧克力就两眼放光， 一口接一口往嘴里塞；看到他最爱的草莓蛋糕，更是狼吞虎咽，没一会儿就消灭了一大块；就连普通的小饼干，他也能吃得津津有味，一袋接一袋停不下来。"
+            content: "弟弟十分<span class='highlight-red'>贪吃</span>，看到巧克力就两眼放光， 一口接一口往嘴里塞；看到他最爱的草莓蛋糕，更是狼吞虎咽，没一会儿就消灭了一大块；就连普通的小饼干，他也能吃得津津有味，一袋接一袋停不下来。"
           },
                             {
             date: "2025-05-12",
@@ -212,7 +216,7 @@
           },
                       {
             date: "2025-05-09",
-            content: "雨下得真大！豆大的雨水倾泻而下，天地间仿佛挂上了一幅巨大的水幕，街道上瞬间水流成河，车辆驶过，溅起半人高的水花。远处的高楼在雨雾中若隐若现，仿佛置身于缥缈的仙境。"
+            content: "雨下得真大！<span class='highlight-red'>豆大</span>的雨水倾泻而下，天地间仿佛挂上了一幅巨大的水幕，街道上瞬间水流成河，车辆驶过，溅起半人高的水花。远处的高楼在雨雾中若隐若现，仿佛置身于缥缈的仙境。"
           },
         {
             date: "2025-05-08",
