feat: 添加高亮功能和全角转换处理，增强内容展示效果

--- a/admin.html
+++ b/admin.html
@@ -43,6 +43,10 @@
             --pre-bg: #4a5568;
         }
 
+        .highlight-red {
+            color: #ff0000; /* 红色 */
+        }
+
         body {
             font-family: 'Noto Sans SC', Tahoma, Arial, "Helvetica Neue", "Heiti SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
             background-color: var(--background-color);
@@ -192,6 +196,21 @@
         const contentInput = document.getElementById('contentInput');
         const previewArea = document.getElementById('previewArea');
 
+        // 新增：辅助函数，处理高亮标记和全角转换
+        function processLineForHighlightingAndFullWidth(line, toFullWidthFunc) {
+            const parts = line.split(/(##.*?##)/g); // 按 ##标记## 分割，并保留标记部分
+            let processedLine = "";
+            for (const part of parts) {
+                if (part.startsWith("##") && part.endsWith("##")) {
+                    const highlightedText = part.substring(2, part.length - 2); // 提取标记内的文本
+                    processedLine += `<span class='highlight-red'>${toFullWidthFunc(highlightedText)}</span>`;
+                } else {
+                    processedLine += toFullWidthFunc(part); // 对非标记部分应用全角转换
+                }
+            }
+            return processedLine;
+        }
+
         // 生成数组项
         function generateArrayItem() {
             const lines = contentInput.value.split('\n').filter(line => line.trim());
@@ -211,9 +230,7 @@
                 let result = "";
                 for (let i = 0; i < str.length; i++) {
                     const charCode = str.charCodeAt(i);
-                    // 将半角标点符号转换成全角
-                    if (charCode > 32 && charCode < 127) { // ASCII 范围内的可见字符
-                        // 常见标点符号的映射，可以根据需要扩展
+                    if (charCode > 32 && charCode < 127) {
                         const punctuationMap = {
                             '!': '！', '"': '“', '#': '＃', '$': '＄', '%': '％', '&': '＆',
                             '\'': '’', '(': '（', ')': '）', '*': '＊', '+': '＋', ',': '，',
@@ -222,9 +239,9 @@
                             ']': '］', '^': '＾', '_': '＿', '`': '｀', '{': '｛', '|': '｜',
                             '}': '｝', '~': '～'
                         };
-                        result += punctuationMap[str[i]] || String.fromCharCode(charCode + 65248); // 其他字符转全角
+                        result += punctuationMap[str[i]] || String.fromCharCode(charCode + 65248);
                     } else {
-                        result += str[i]; // 非ASCII字符或空格保持不变
+                        result += str[i];
                     }
                 }
                 return result;
@@ -232,11 +249,12 @@
 
             let content;
             if (lines.length === 1) {
-                // 单行直接使用引号包裹，并转义特殊字符，然后转全角
-                content = `"${toFullWidth(lines[0]).replace(/"/g, '\\"').replace(/`/g, '\\`')}"`;
+                // 使用新函数处理单行内容
+                const processedSingleLine = processLineForHighlightingAndFullWidth(lines[0], toFullWidth);
+                content = `"${processedSingleLine.replace(/"/g, '\\"').replace(/`/g, '\\`')}"`;
             } else {
-                // 多行使用模板字符串，并转义反引号，然后转全角
-                const escapedLines = lines.map(line => `              <li>${toFullWidth(line).replace(/`/g, '\\`')}</li>`).join('\n');
+                // 使用新函数处理多行内容
+                const escapedLines = lines.map(line => `              <li>${processLineForHighlightingAndFullWidth(line, toFullWidth).replace(/`/g, '\\`')}</li>`).join('\n');
                 content = `\`<ol class="list-decimal list-inside space-y-2">\n${escapedLines}\n            </ol>\``;
             }
 
@@ -245,8 +263,8 @@
                 `            date: "${dateInput.value}",`
             ];
 
-            // 只有当 title 不为空时才添加 title 字段，并转义特殊字符
             if (titleInput.value.trim()) {
+                // 对标题也应用全角转换
                 parts.push(`            title: "${toFullWidth(titleInput.value).replace(/"/g, '\\"')}",`);
             }
 
