--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
     <script>
         // 数据数组
         const entries = [
+                      {
+            date: "2025-05-15",
+            title: "（阳光猛烈）",
+            content: "天热得发了狂。阳光如千万根金针，刺得人皮肤生疼。树叶蔫蔫地耷拉着，像被抽干了水分，连蝉鸣都显得有气无力。汗水像断了线的珠子，不停地往下淌，衣服湿漉漉地贴在身上。没有一丝风，整个校园仿佛被罩在一个巨大的蒸笼里，热得无法呼吸。"
+          },
                   {
             date: "2025-05-13",
             title: "（围绕一个意思写）",
