feat: 在数据数组中添加新的励志条目

--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
     <script>
         // 数据数组
         const entries = [
+        {
+            date: "2025-05-19",
+            title: "（励志）",
+            content: "一些看似不起眼的点滴努力，会在日后开花结果，会在某一刻，突然让你看到坚持的意义。愿你活成一颗种子，静默地积蓄力量，有朝一日破土而出，惊艳时光。"
+          },
                       {
             date: "2025-05-16",
             content: "他灵活地穿梭在球场上，动作流畅自如，就像一条水中的鱼儿，时而向左，时而向右，让对手捉摸不透。突然，他猛地一脚，将球传给了队友。"
