feat: 添加新的励志内容条目

--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
     <script>
         // 数据数组
         const entries = [
+                    {
+            date: "2025-05-20",
+            title: "（励志）",
+            content: "我将来一定会成为一个很了不起的人，虽然不是第一名，但是我进步了，就是最大的成功，遇到困难，努力想办法解决，我的背后有家长有老师有同学。我努力了，我不后悔。"
+          },
         {
             date: "2025-05-19",
             title: "（励志）",
