--- a/index.html
+++ b/index.html
@@ -205,9 +205,13 @@
         // 数据数组
         const entries = [
                     {
+            date: "2025-05-22",
+            content: "把自己活成一道光，因为你不知道，谁会借着你的光，走出了黑暗。请保持心中的善良，因为你不知道，谁会借着你的善良，走出了绝望。请保持你心中的信仰，因为你不知道，谁会借着你的信仰，走出了迷茫。请相信自己的力量，因为你不知道，谁会因为相信你，开始相信了自己。"
+          },
+                    {
             date: "2025-05-20",
             title: "（励志）",
-            content: "我将来一定会成为一个很了不起的人，虽然不是第一名，但是我进步了，就是最大的成功，遇到困难，努力想办法解决，我的背后有家长有老师有同学。我努力了，我不后悔。"
+            content: "我将来一定会成为一个很了不起的人，虽然不是第一名，但是我进步了，就是最大的成功，遇到困难不要怕，努力想办法解决，我的背后有家长有老师有同学。我努力了，我不后悔。"
           },
         {
             date: "2025-05-19",
