feat: 添加泰戈尔的励志内容条目

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         const entries = [
                     {
             date: "2025-05-22",
+            title: "泰戈尔《用生命影响生命》",            
             content: "把自己活成一道光，因为你不知道，谁会借着你的光，走出了黑暗。请保持心中的善良，因为你不知道，谁会借着你的善良，走出了绝望。请保持你心中的信仰，因为你不知道，谁会借着你的信仰，走出了迷茫。请相信自己的力量，因为你不知道，谁会因为相信你，开始相信了自己。"
           },
                     {
