--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             content: `<ol class="list-decimal list-inside space-y-2">
               <li>世上没有白走的路，你走的每一步都算数！将来的你，一定会感谢现在奋斗的自己！</li>
               <li>人生就像一场马拉松，不在乎你跑得多快，而在乎你坚持多久。</li>
-              <li>努力不是为了给世界看的，而是为了去看世界</li>
+              <li>努力不是为了给世界看的，而是为了去看世界。</li>
             </ol>`
           },
                     {
