feat: 添加新的内容条目“（书虫）”

--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
     <script>
         // 数据数组
         const entries = [
+                    {
+            date: "2025-05-26",
+            title: "（书虫）",
+            content: "我的同桌是个十足的“小书虫”。课间休息时，教室里总是闹哄哄的，同学们嬉笑玩闹，他却像被施了定身咒，坐在座位上一动不动，沉浸在书本的世界里。他的眼睛紧紧盯着书页，时而眉头微皱，时而嘴角上扬，完全不受外界干扰。"
+          },
                       {
             date: "2025-05-23",
             title: "（励志）",
