--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
 
         .copy-button:active, .theme-toggle:active {
             transform: scale(0.95);
-        }
-
-        .copy-button {
+        }        .copy-button {
             position: absolute;
-            top: 1rem;
-            right: 1rem;
-            padding: 0.5rem;
-            border-radius: 0.375rem;
+            top: 0.5rem;
+            right: 0.5rem;
+            padding: 0.25rem;
+            font-size: 0.875rem;
+            border-radius: 0.25rem;
             background-color: var(--card-background);
             border: 1px solid var(--border-color);
             opacity: 0;
             will-change: transform, box-shadow, opacity;
+            z-index: 10;
         }
 
         .card:hover .copy-button {
