更新 index.html 文件

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         const entries = [
                   {
             date: "2025-05-28",
-            title: "（假如．．．．．．）",
+            title: "（假如……）",
             content: "假如我有一双翅膀， 我要飞向神秘的森林。在茂密的枝叶间穿梭，和活泼的小松鼠打招呼，听鸟儿们快乐地歌唱。我会停在粗壮的树枝上， 看勤劳的小蜜蜂采蜜，为在花丛中翩翩起舞的蝴蝶喝彩！"
           },
                     {
