更新搜索输入框的占位符文本为“搜索内容及背诵情况...”

--- a/31.html
+++ b/31.html
@@ -191,7 +191,7 @@
         <div class="search-container mb-8">
             <div class="relative">
                 <i class="fas fa-search search-icon"></i>
-                <input type="text" id="searchInput" class="search-input" placeholder="搜索内容..." autocomplete="off">
+                <input type="text" id="searchInput" class="search-input" placeholder="搜索内容及背诵情况..." autocomplete="off">
             </div>
         </div>
         
