--- a/admin.html
+++ b/admin.html
@@ -144,7 +144,7 @@
 </head>
 <body class="min-h-screen py-8">
     <button class="theme-toggle p-2 rounded-full" onclick="toggleTheme()">
-        <!-- Icon will be set by JS -->
+        <i class="fas fa-sun text-yellow-500"></i>
     </button>
 
     <div class="container mx-auto px-4 max-w-4xl">
