Refactor data structure for daily entries and separate data files
- Moved daily entries from `32.html` to a new `32data.js` file for better organization.
- Created a new `data.js` file for future entries with a placeholder.
- Updated `index.html` to reference the new `data.js` file instead of inline data.
- Removed inline data array from `index.html` to streamline the code.

--- a/index.html
+++ b/index.html
@@ -261,15 +261,8 @@
         <div class="grid gap-6" id="cardView"></div>
     </div>
     
+    <script src="data.js"></script>
     <script>
-        // 数据数组
-        const entries = [
-          {
-            date: "2025-09-01",
-            content: "暂无"
-          }
-          
-        ];
 
         // 创建卡片的函数
         function createCards() {
