feat: 添加每日积累数据文件并更新引用路径

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <div class="grid gap-6" id="cardView"></div>
     </div>
     
-    <script src="data.js"></script>
+    <script src="41data.js"></script>
     <script>
 
         // 创建卡片的函数
