--- a/32.html
+++ b/32.html
@@ -7,7 +7,7 @@
     
     <!-- Open Graph metadata -->
     <meta property="og:title" content="每日积累 - 三年级下">
-    <meta property="og:description" content="文学之美，点滴汇聚。三年级下册语文每日积累内容。">
+    <meta property="og:description" content="文学之美，点滴汇聚">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://daily.yangbing.eu.org/32.html">
     <meta property="og:image" content="https://daily.yangbing.eu.org/assets/logo/logo.png">
