--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
             <p class="text-lg text-gray-500 dark:text-white">文学之美，点滴汇聚</p>
         </header>
 
+        <!-- 年级导航栏 -->
+        <nav class="navigation-bar mb-6">
+            <div class="flex justify-center space-x-3">
+                <a href="31.html" class="nav-link px-3 py-1.5 text-sm rounded-lg bg-gray-100 dark:bg-gray-800 hover:bg-green-100 dark:hover:bg-green-900 transition-colors">
+                    三年级上
+                </a>
+                <a href="32.html" class="nav-link px-3 py-1.5 text-sm rounded-lg bg-gray-100 dark:bg-gray-800 hover:bg-green-100 dark:hover:bg-green-900 transition-colors">
+                    三年级下
+                </a>
+                <a href="index.html" class="nav-link px-3 py-1.5 text-sm rounded-lg bg-green-500 text-white hover:bg-green-600 transition-colors">
+                    四年级上
+                </a>
+            </div>
+        </nav>
+
         <!-- 搜索框 -->
         <div class="search-container mb-8">
             <div class="relative">
