--- a/admin.html
+++ b/admin.html
@@ -151,7 +151,7 @@
         </header>
 
         <!-- 添加表单 -->
-        <div class="card rounded-lg p-6 mb-8">
+        <div class="card rounded-lg p-6 mb-8" style="opacity: 1; transform: translateY(0);">
             <form id="entryForm" class="space-y-6">
                 <div>
                     <label for="dateInput" class="form-label">日期</label>
@@ -187,7 +187,7 @@
         </div>
 
         <!-- 预览区域 -->
-        <div class="card rounded-lg p-6">
+        <div class="card rounded-lg p-6" style="opacity: 1; transform: translateY(0);">
             <div class="flex justify-between items-center mb-4">
                 <h2 class="text-2xl font-bold">数组内容预览</h2>
                 <button onclick="copyContent()" class="btn btn-secondary">
