--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta property="og:title" content="每日积累 - 四年级上">
     <meta property="og:description" content="文学之美，点滴汇聚">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://daily.yangbing.eu.org/">
-    <meta property="og:image" content="https://daily.yangbing.eu.org/assets/logo/logo.webp">
+    <meta property="og:url" content="https://daily.byhooi.tk/">
+    <meta property="og:image" content="https://daily.byhooi.tk/assets/logo/logo.webp">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     
